2005-02-19	Benedikt Meurer <benny@xfce.org>

	* acinclude.m4, configure.ac: Remove custom Python headers check
	  and use the new check from xfce4-dev-tools instead.

2005-02-18	Benedikt Meurer <benny@xfce.org>

	* po/libexo-0.3.pot, po/de.po, po/en_GB.po: Update the translation
	  files with the recent changes to the source files.
	* po/ChangeLog: Add an empty file here, as its required by the
	  po/Makefile.in.in file generated by gettextize.
	* configure.ac: Add the Makefile for the Python examples. Add
	  a Makefile variable LIBEXO_VERSION_API, that contains the
	  API version of libexo.
	* python/examples/Makefile.am, python/examples/ellipsizing.py,
	  python/examples/README: Ship simple python examples, currently
	  only one sample program to demonstrate the use of the ellipsizing
	  objects in libexo.
	* python/__init__.py, python/pyexo.py, python/Makefile.am: Use a
	  similar technique like pygtk to support installing multiple
	  versions of the pyexo bindings in parallel.
	* python/exomodule.c, python/exo.override, python/exo.defs,
	  python/Makefile.am: Include the ExoEllipsizedLabel and
	  ExoCellRendererEllipsizedText classes with the Python bindings.
	* NEWS: Add note about the new Python bindings.

2005-02-17	Benedikt Meurer <benny@xfce.org>

	* python/exomodule.c, python/Makefile.am, python/exo.override, TODO,
	  python/exo.defs, configure.ac, acinclude.m4, Makefile.am: Initial
	  work on the Python bindings, currently includes ExoIconBar and
	  ExoXsessionClient.

2005-02-15	Benedikt Meurer <benny@xfce.org>

	* exo.spec.in: Do not include the API docs with the exo-devel package,
	  but instead, use a exo-docs package.
	* exo.spec.in: Do not depend on D-BUS any longer.
	* exo.spec.in: Add --enable-final as configure parameter.

2005-02-15	Benedikt Meurer <benny@xfce.org>

	* docs: Restructured.

2005-02-15	Benedikt Meurer <benny@xfce.org>

	* configure.ac, po/libexo.pot, po/libexo-0.3.pot: Include the major